lexer_parser/Mx_starParser.cpp

// Generated from /Users/zhangyuheng/CLionProjects/Comiler-Mx_star/grammar/Mx_star.g4 by ANTLR 4.8


#include "Mx_starListener.h"
#include "Mx_starVisitor.h"

#include "Mx_starParser.h"


using namespace antlrcpp;
using namespace antlr4;

Mx_starParser::Mx_starParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

Mx_starParser::~Mx_starParser() {
  delete _interpreter;
}

std::string Mx_starParser::getGrammarFileName() const {
  return "Mx_star.g4";
}

const std::vector<std::string>& Mx_starParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& Mx_starParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

Mx_starParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<Mx_starParser::ClassdeclarationContext *> Mx_starParser::ProgContext::classdeclaration() {
  return getRuleContexts<Mx_starParser::ClassdeclarationContext>();
}

Mx_starParser::ClassdeclarationContext* Mx_starParser::ProgContext::classdeclaration(size_t i) {
  return getRuleContext<Mx_starParser::ClassdeclarationContext>(i);
}

std::vector<Mx_starParser::FunctiondeclarationContext *> Mx_starParser::ProgContext::functiondeclaration() {
  return getRuleContexts<Mx_starParser::FunctiondeclarationContext>();
}

Mx_starParser::FunctiondeclarationContext* Mx_starParser::ProgContext::functiondeclaration(size_t i) {
  return getRuleContext<Mx_starParser::FunctiondeclarationContext>(i);
}

std::vector<Mx_starParser::VardeclarationContext *> Mx_starParser::ProgContext::vardeclaration() {
  return getRuleContexts<Mx_starParser::VardeclarationContext>();
}

Mx_starParser::VardeclarationContext* Mx_starParser::ProgContext::vardeclaration(size_t i) {
  return getRuleContext<Mx_starParser::VardeclarationContext>(i);
}


size_t Mx_starParser::ProgContext::getRuleIndex() const {
  return Mx_starParser::RuleProg;
}

void Mx_starParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void Mx_starParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}


antlrcpp::Any Mx_starParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Mx_starVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

Mx_starParser::ProgContext* Mx_starParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, Mx_starParser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << Mx_starParser::Int)
      | (1ULL << Mx_starParser::Bool)
      | (1ULL << Mx_starParser::String)
      | (1ULL << Mx_starParser::Void)
      | (1ULL << Mx_starParser::Class)
      | (1ULL << Mx_starParser::Identifier))) != 0)) {
      setState(71);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(68);
        classdeclaration();
        break;
      }

      case 2: {
        setState(69);
        functiondeclaration();
        break;
      }

      case 3: {
        setState(70);
        vardeclaration();
        break;
      }

      }
      setState(75);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassdeclarationContext ------------------------------------------------------------------

Mx_starParser::ClassdeclarationContext::ClassdeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Mx_starParser::ClassdeclarationContext::Class() {
  return getToken(Mx_starParser::Class, 0);
}

tree::TerminalNode* Mx_starParser::ClassdeclarationContext::Identifier() {
  return getToken(Mx_starParser::Identifier, 0);
}

tree::TerminalNode* Mx_starParser::ClassdeclarationContext::Opencur() {
  return getToken(Mx_starParser::Opencur, 0);
}

tree::TerminalNode* Mx_starParser::ClassdeclarationContext::Closecur() {
  return getToken(Mx_starParser::Closecur, 0);
}

tree::TerminalNode* Mx_starParser::ClassdeclarationContext::Semicolon() {
  return getToken(Mx_starParser::Semicolon, 0);
}

std::vector<Mx_starParser::FunctiondeclarationContext *> Mx_starParser::ClassdeclarationContext::functiondeclaration() {
  return getRuleContexts<Mx_starParser::FunctiondeclarationContext>();
}

Mx_starParser::FunctiondeclarationContext* Mx_starParser::ClassdeclarationContext::functiondeclaration(size_t i) {
  return getRuleContext<Mx_starParser::FunctiondeclarationContext>(i);
}

std::vector<Mx_starParser::VardeclarationContext *> Mx_starParser::ClassdeclarationContext::vardeclaration() {
  return getRuleContexts<Mx_starParser::VardeclarationContext>();
}

Mx_starParser::VardeclarationContext* Mx_starParser::ClassdeclarationContext::vardeclaration(size_t i) {
  return getRuleContext<Mx_starParser::VardeclarationContext>(i);
}


size_t Mx_starParser::ClassdeclarationContext::getRuleIndex() const {
  return Mx_starParser::RuleClassdeclaration;
}

void Mx_starParser::ClassdeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassdeclaration(this);
}

void Mx_starParser::ClassdeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassdeclaration(this);
}


antlrcpp::Any Mx_starParser::ClassdeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Mx_starVisitor*>(visitor))
    return parserVisitor->visitClassdeclaration(this);
  else
    return visitor->visitChildren(this);
}

Mx_starParser::ClassdeclarationContext* Mx_starParser::classdeclaration() {
  ClassdeclarationContext *_localctx = _tracker.createInstance<ClassdeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, Mx_starParser::RuleClassdeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(Mx_starParser::Class);
    setState(77);
    match(Mx_starParser::Identifier);
    setState(78);
    match(Mx_starParser::Opencur);
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << Mx_starParser::Int)
      | (1ULL << Mx_starParser::Bool)
      | (1ULL << Mx_starParser::String)
      | (1ULL << Mx_starParser::Void)
      | (1ULL << Mx_starParser::Identifier))) != 0)) {
      setState(81);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
      case 1: {
        setState(79);
        functiondeclaration();
        break;
      }

      case 2: {
        setState(80);
        vardeclaration();
        break;
      }

      }
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(86);
    match(Mx_starParser::Closecur);
    setState(87);
    match(Mx_starParser::Semicolon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctiondeclarationContext ------------------------------------------------------------------

Mx_starParser::FunctiondeclarationContext::FunctiondeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Mx_starParser::FunctiondeclarationContext::Identifier() {
  return getToken(Mx_starParser::Identifier, 0);
}

tree::TerminalNode* Mx_starParser::FunctiondeclarationContext::Openpar() {
  return getToken(Mx_starParser::Openpar, 0);
}

tree::TerminalNode* Mx_starParser::FunctiondeclarationContext::Closepar() {
  return getToken(Mx_starParser::Closepar, 0);
}

Mx_starParser::BlockContext* Mx_starParser::FunctiondeclarationContext::block() {
  return getRuleContext<Mx_starParser::BlockContext>(0);
}

Mx_starParser::TypespecifierContext* Mx_starParser::FunctiondeclarationContext::typespecifier() {
  return getRuleContext<Mx_starParser::TypespecifierContext>(0);
}

std::vector<Mx_starParser::ParameterContext *> Mx_starParser::FunctiondeclarationContext::parameter() {
  return getRuleContexts<Mx_starParser::ParameterContext>();
}

Mx_starParser::ParameterContext* Mx_starParser::FunctiondeclarationContext::parameter(size_t i) {
  return getRuleContext<Mx_starParser::ParameterContext>(i);
}

std::vector<tree::TerminalNode *> Mx_starParser::FunctiondeclarationContext::Comma() {
  return getTokens(Mx_starParser::Comma);
}

tree::TerminalNode* Mx_starParser::FunctiondeclarationContext::Comma(size_t i) {
  return getToken(Mx_starParser::Comma, i);
}


size_t Mx_starParser::FunctiondeclarationContext::getRuleIndex() const {
  return Mx_starParser::RuleFunctiondeclaration;
}

void Mx_starParser::FunctiondeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctiondeclaration(this);
}

void Mx_starParser::FunctiondeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctiondeclaration(this);
}


antlrcpp::Any Mx_starParser::FunctiondeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Mx_starVisitor*>(visitor))
    return parserVisitor->visitFunctiondeclaration(this);
  else
    return visitor->visitChildren(this);
}

Mx_starParser::FunctiondeclarationContext* Mx_starParser::functiondeclaration() {
  FunctiondeclarationContext *_localctx = _tracker.createInstance<FunctiondeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, Mx_starParser::RuleFunctiondeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(89);
      typespecifier();
      break;
    }

    }
    setState(92);
    match(Mx_starParser::Identifier);
    setState(93);
    match(Mx_starParser::Openpar);
    setState(102);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << Mx_starParser::Int)
      | (1ULL << Mx_starParser::Bool)
      | (1ULL << Mx_starParser::String)
      | (1ULL << Mx_starParser::Void)
      | (1ULL << Mx_starParser::Identifier))) != 0)) {
      setState(94);
      parameter();
      setState(99);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == Mx_starParser::Comma) {
        setState(95);
        match(Mx_starParser::Comma);
        setState(96);
        parameter();
        setState(101);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(104);
    match(Mx_starParser::Closepar);
    setState(105);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

Mx_starParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Mx_starParser::TypespecifierContext* Mx_starParser::ParameterContext::typespecifier() {
  return getRuleContext<Mx_starParser::TypespecifierContext>(0);
}

tree::TerminalNode* Mx_starParser::ParameterContext::Identifier() {
  return getToken(Mx_starParser::Identifier, 0);
}

std::vector<tree::TerminalNode *> Mx_starParser::ParameterContext::Openbra() {
  return getTokens(Mx_starParser::Openbra);
}

tree::TerminalNode* Mx_starParser::ParameterContext::Openbra(size_t i) {
  return getToken(Mx_starParser::Openbra, i);
}

std::vector<tree::TerminalNode *> Mx_starParser::ParameterContext::Closebra() {
  return getTokens(Mx_starParser::Closebra);
}

tree::TerminalNode* Mx_starParser::ParameterContext::Closebra(size_t i) {
  return getToken(Mx_starParser::Closebra, i);
}


size_t Mx_starParser::ParameterContext::getRuleIndex() const {
  return Mx_starParser::RuleParameter;
}

void Mx_starParser::ParameterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter(this);
}

void Mx_starParser::ParameterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter(this);
}


antlrcpp::Any Mx_starParser::ParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Mx_starVisitor*>(visitor))
    return parserVisitor->visitParameter(this);
  else
    return visitor->visitChildren(this);
}

Mx_starParser::ParameterContext* Mx_starParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 6, Mx_starParser::RuleParameter);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    typespecifier();
    setState(112);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == Mx_starParser::Openbra) {
      setState(108);
      match(Mx_starParser::Openbra);
      setState(109);
      match(Mx_starParser::Closebra);
      setState(114);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(115);
    match(Mx_starParser::Identifier);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

Mx_starParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Mx_starParser::VardeclarationContext* Mx_starParser::StatementContext::vardeclaration() {
  return getRuleContext<Mx_starParser::VardeclarationContext>(0);
}

Mx_starParser::IfstatementContext* Mx_starParser::StatementContext::ifstatement() {
  return getRuleContext<Mx_starParser::IfstatementContext>(0);
}

Mx_starParser::IterationstatementContext* Mx_starParser::StatementContext::iterationstatement() {
  return getRuleContext<Mx_starParser::IterationstatementContext>(0);
}

Mx_starParser::JumpstatementContext* Mx_starParser::StatementContext::jumpstatement() {
  return getRuleContext<Mx_starParser::JumpstatementContext>(0);
}

Mx_starParser::ExpressionstatementContext* Mx_starParser::StatementContext::expressionstatement() {
  return getRuleContext<Mx_starParser::ExpressionstatementContext>(0);
}

Mx_starParser::EmptystatementContext* Mx_starParser::StatementContext::emptystatement() {
  return getRuleContext<Mx_starParser::EmptystatementContext>(0);
}

Mx_starParser::BlockContext* Mx_starParser::StatementContext::block() {
  return getRuleContext<Mx_starParser::BlockContext>(0);
}


size_t Mx_starParser::StatementContext::getRuleIndex() const {
  return Mx_starParser::RuleStatement;
}

void Mx_starParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void Mx_starParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


antlrcpp::Any Mx_starParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Mx_starVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

Mx_starParser::StatementContext* Mx_starParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 8, Mx_starParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(124);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(117);
      vardeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(118);
      ifstatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(119);
      iterationstatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(120);
      jumpstatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(121);
      expressionstatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(122);
      emptystatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(123);
      block();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

Mx_starParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Mx_starParser::BlockContext::Opencur() {
  return getToken(Mx_starParser::Opencur, 0);
}

tree::TerminalNode* Mx_starParser::BlockContext::Closecur() {
  return getToken(Mx_starParser::Closecur, 0);
}

std::vector<Mx_starParser::StatementContext *> Mx_starParser::BlockContext::statement() {
  return getRuleContexts<Mx_starParser::StatementContext>();
}

Mx_starParser::StatementContext* Mx_starParser::BlockContext::statement(size_t i) {
  return getRuleContext<Mx_starParser::StatementContext>(i);
}


size_t Mx_starParser::BlockContext::getRuleIndex() const {
  return Mx_starParser::RuleBlock;
}

void Mx_starParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void Mx_starParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


antlrcpp::Any Mx_starParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Mx_starVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

Mx_starParser::BlockContext* Mx_starParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 10, Mx_starParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    match(Mx_starParser::Opencur);
    setState(130);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << Mx_starParser::Stringliteral)
      | (1ULL << Mx_starParser::Integerliteral)
      | (1ULL << Mx_starParser::Plus)
      | (1ULL << Mx_starParser::Minus)
      | (1ULL << Mx_starParser::Inc)
      | (1ULL << Mx_starParser::Dec)
      | (1ULL << Mx_starParser::Logic_not)
      | (1ULL << Mx_starParser::Bitwise_not)
      | (1ULL << Mx_starParser::Openpar)
      | (1ULL << Mx_starParser::Opencur)
      | (1ULL << Mx_starParser::Semicolon)
      | (1ULL << Mx_starParser::Int)
      | (1ULL << Mx_starParser::Bool)
      | (1ULL << Mx_starParser::String)
      | (1ULL << Mx_starParser::Null)
      | (1ULL << Mx_starParser::Void)
      | (1ULL << Mx_starParser::True)
      | (1ULL << Mx_starParser::False)
      | (1ULL << Mx_starParser::If)
      | (1ULL << Mx_starParser::For)
      | (1ULL << Mx_starParser::While)
      | (1ULL << Mx_starParser::Break)
      | (1ULL << Mx_starParser::Continue)
      | (1ULL << Mx_starParser::Return)
      | (1ULL << Mx_starParser::New)
      | (1ULL << Mx_starParser::This)
      | (1ULL << Mx_starParser::Identifier))) != 0)) {
      setState(127);
      statement();
      setState(132);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(133);
    match(Mx_starParser::Closecur);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardeclarationContext ------------------------------------------------------------------

Mx_starParser::VardeclarationContext::VardeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Mx_starParser::TypespecifierContext* Mx_starParser::VardeclarationContext::typespecifier() {
  return getRuleContext<Mx_starParser::TypespecifierContext>(0);
}

tree::TerminalNode* Mx_starParser::VardeclarationContext::Identifier() {
  return getToken(Mx_starParser::Identifier, 0);
}

tree::TerminalNode* Mx_starParser::VardeclarationContext::Semicolon() {
  return getToken(Mx_starParser::Semicolon, 0);
}

tree::TerminalNode* Mx_starParser::VardeclarationContext::Assign() {
  return getToken(Mx_starParser::Assign, 0);
}

Mx_starParser::ExpressionContext* Mx_starParser::VardeclarationContext::expression() {
  return getRuleContext<Mx_starParser::ExpressionContext>(0);
}


size_t Mx_starParser::VardeclarationContext::getRuleIndex() const {
  return Mx_starParser::RuleVardeclaration;
}

void Mx_starParser::VardeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVardeclaration(this);
}

void Mx_starParser::VardeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVardeclaration(this);
}


antlrcpp::Any Mx_starParser::VardeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Mx_starVisitor*>(visitor))
    return parserVisitor->visitVardeclaration(this);
  else
    return visitor->visitChildren(this);
}

Mx_starParser::VardeclarationContext* Mx_starParser::vardeclaration() {
  VardeclarationContext *_localctx = _tracker.createInstance<VardeclarationContext>(_ctx, getState());
  enterRule(_localctx, 12, Mx_starParser::RuleVardeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    typespecifier();
    setState(136);
    match(Mx_starParser::Identifier);
    setState(139);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == Mx_starParser::Assign) {
      setState(137);
      match(Mx_starParser::Assign);
      setState(138);
      expression();
    }
    setState(141);
    match(Mx_starParser::Semicolon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfstatementContext ------------------------------------------------------------------

Mx_starParser::IfstatementContext::IfstatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Mx_starParser::IfstatementContext::If() {
  return getToken(Mx_starParser::If, 0);
}

tree::TerminalNode* Mx_starParser::IfstatementContext::Openpar() {
  return getToken(Mx_starParser::Openpar, 0);
}

Mx_starParser::ExpressionContext* Mx_starParser::IfstatementContext::expression() {
  return getRuleContext<Mx_starParser::ExpressionContext>(0);
}

tree::TerminalNode* Mx_starParser::IfstatementContext::Closepar() {
  return getToken(Mx_starParser::Closepar, 0);
}

std::vector<Mx_starParser::StatementContext *> Mx_starParser::IfstatementContext::statement() {
  return getRuleContexts<Mx_starParser::StatementContext>();
}

Mx_starParser::StatementContext* Mx_starParser::IfstatementContext::statement(size_t i) {
  return getRuleContext<Mx_starParser::StatementContext>(i);
}

tree::TerminalNode* Mx_starParser::IfstatementContext::Else() {
  return getToken(Mx_starParser::Else, 0);
}


size_t Mx_starParser::IfstatementContext::getRuleIndex() const {
  return Mx_starParser::RuleIfstatement;
}

void Mx_starParser::IfstatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfstatement(this);
}

void Mx_starParser::IfstatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<Mx_starListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfstatement(this);
}

